--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,34 @@
+* {
+margin: 0;
+}
+body {
+width: 100%
+}
 table {
 text-align: center;
 border-collapse: collapse;
+width: 100%;
+
 }
 table th {
-padding: 10px;
 border: 1px solid;
 }
 table td {
-padding: 10px;
 border: 1px solid;
 }
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) {
+background-color: #f2f2f2;
+}
+.section {
+float: left;
+width: 80%;
+height: 100%;
+}
+.side{
+width: 10%;
+float: left;
+height: 100%;
+}
+form {
+    height: 50%;
+}
